# kaspersky-scanner

./: .gitignore  CMakeLists.txt  README.md  base.csv
src/: connector.h  csvloader.cpp  csvloader.h  hasher.cpp  hasher.h  logger.cpp  logger.h  main.cpp  walker.cpp  walker.h
tests/: csvloader_test.cpp  hasher_test.cpp  logger_test.cpp  walker_test.cpp
